# mlflow-kubernetes-plugins

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  OWNERS  README.md  go.mod  go.sum  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: build-image.yml  github-stale.yaml  publish.yml  tests.yml
api/mlflowconfig/v1/: groupversion_info.go  mlflowconfig_types.go  mlflowconfig_types_test.go  zz_generated.deepcopy.go
config/crd/bases/: mlflow.kubeflow.org_mlflowconfigs.yaml
docs/: authorization-plugin.md  index.md  kubernetes-rbac.md  workspace-provider.md
examples/: mlflow-server-rbac.yaml  team-a-workspace.yaml
hack/: boilerplate.go.txt
mlflow_kubernetes_plugins/: __init__.py  auth.py  auth_graphql.py  provider.py  provider_caches.py
mlflow_kubernetes_plugins/auth/: __init__.py  _compat.py  authorizer.py  collection_filters.py  compiler.py  constants.py  core.py  graphql.py  middleware.py  request_context.py  resource_names.py  rules.py  rules_base.py  rules_v3_11.py  rules_v3_12.py
mlflow_kubernetes_plugins/workspace_plugin/: __init__.py  caches.py  provider.py
src/kubernetes_workspace_provider/: auth.py  auth_graphql.py  provider.py
tests/: conftest.py  test_auth.py  test_auth_fastapi.py  test_auth_graphql.py  test_provider.py
