[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-kubernetes-plugins"
version = "1.2.1"
description = "Kubernetes-backed WorkspaceProvider implementation and Kubernetes authorization plugin for MLflow workspaces."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "The Kubeflow Authors", email = "kubeflow-discuss@googlegroups.com" }]
keywords = ["mlflow", "kubernetes", "workspaces", "authorization", "plugins"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "mlflow>=3.10.0,<4.0.0",
  "kubernetes>=29.0.0",
  "graphql-core>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/kubeflow/mlflow-integration"
Repository = "https://github.com/kubeflow/mlflow-integration"
Issues = "https://github.com/kubeflow/mlflow-integration/issues"
Documentation = "https://github.com/kubeflow/mlflow-integration/tree/main/docs"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock>=3.10", "httpx>=0.27.0", "ruff", "build"]

[project.entry-points."mlflow.workspace_provider"]
kubernetes = "mlflow_kubernetes_plugins.workspace_plugin.provider:create_kubernetes_workspace_store"

[project.entry-points."mlflow.app"]
kubernetes-auth = "mlflow_kubernetes_plugins.auth.middleware:create_app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlflow_kubernetes_plugins*"]

[tool.setuptools.package-data]
mlflow_kubernetes_plugins = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["mlflow_kubernetes_plugins", "tests"]

[tool.ruff.lint]
extend-select = ["I"]

